--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        <!-- 微信Activity -->
+        <activity
+                android:name="com.fe_sass.wxapi.WXEntryActivity"
+                android:exported="true"
+                android:label="@string/app_name"
+        />
     </application>
 
 </manifest>
