--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
-    "react-native-sglistview": "^0.3.2"
+    "react-native-sglistview": "^0.3.2",
+    "react-native-wechat": "^1.8.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
