--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
     "react-native-sglistview": "^0.3.2",
-    "react-native-wechat": "^1.8.0"
+    "react-native-wechat": "^1.8.0",
     "react-native-sqlite-storage": "^3.2.2",
     "react-native-viewpager": "^0.2.13"
   },
