--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,6 +2,9 @@ rootProject.name = 'FE_Sass'
 
 include ':app'
 include  ':RCTWeChat'
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
+
 project(':RCTWeChat').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wechat/android')
 include ':react-native-sqlite-storage'
 project(':react-native-sqlite-storage').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sqlite-storage/src/android')
