--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':PushSDK')
     compile project(':react-native-image-picker')
+    compile project(':react-native-wheel-picker')
 }
 
 // Run this once to be able to run the application with BUCK
