--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'FE_Sass'
 
 include ':app'
 include  ':RCTWeChat'
+project(':RCTWeChat').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wechat/android')
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 
