--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.41.1",
     "react-native-image-picker": "^0.25.5",
     "react-native-modal-datetime-picker": "^3.0.1",
+    "react-native-photo-view": "^1.2.0",
     "react-native-scrollable-tab-view": "^0.7.2",
     "react-native-sqlite-storage": "^3.2.2",
     "react-native-tab-navigator": "^0.3.3",
