--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,6 +133,7 @@ dependencies {
     compile project(':RCTWeChat')
     compile project(':PushSDK')
     compile project(':react-native-image-picker')
+    compile project(':react-native-picker')
 }
 
 // Run this once to be able to run the application with BUCK
