--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
     "react-native-image-picker": "^0.25.5",
+    "react-native-image-zoom": "^0.32.0",
     "react-native-modal-datetime-picker": "^3.0.1",
-    "react-native-photo-view": "^1.2.0",
     "react-native-scrollable-tab-view": "^0.7.2",
     "react-native-sqlite-storage": "^3.2.2",
     "react-native-tab-navigator": "^0.3.3",
@@ -19,7 +19,6 @@
     "react-native-umeng-push": "^1.0.5",
     "react-native-umeng-sdk": "1.4.0",
     "react-native-viewpager": "^0.2.13",
-    "react-native-wechat": "^1.8.0",
     "react-native-wheel-picker": "^1.1.1"
   },
   "devDependencies": {
