--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,7 @@ dependencies {
     compile project(':react-native-picker')
     compile project(':react-native-wheel-picker')
     compile project(':RCTWeChat')
+    compile 'com.facebook.fresco:animated-gif:0.13.0'
 }
 
 // Run this once to be able to run the application with BUCK
