--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
+    "react-native-gallery": "0.0.17",
     "react-native-image-picker": "^0.25.1",
     "react-native-md5": "^1.0.0",
     "react-native-modal-datetime-picker": "^3.0.1",
