--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,12 +1,12 @@
 rootProject.name = 'FE_Sass'
-include ':react-native-image-picker'
+include ':react-native-image-picker', ':react-native-vin-scan'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 
 include ':react-native-picker'
 project(':react-native-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-picker/android')
 
 include ':app'
-include  ':RCTWeChat'
+include ':RCTWeChat'
 project(':RCTWeChat').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wechat/android')
 
 include ':react-native-sqlite-storage'
@@ -16,3 +16,4 @@ project(':PushSDK').projectDir = new File(rootProject.projectDir, '../node_modul
 
 include ':react-native-wheel-picker'
 project(':react-native-wheel-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wheel-picker/android')
+
