--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 .DS_Store
 
 # Xcode
-build/
-ios/build/
+ios/build
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -24,7 +23,6 @@ project.xcworkspace
 
 # Android/IntelliJ
 #
-build/
 .idea
 .gradle
 local.properties
