--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,6 +121,7 @@ lintOptions {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
 
         }
     }
@@ -146,8 +147,6 @@ lintOptions {
 }
 
 dependencies {
-    compile project(':react-native-wechat')
-    compile project(':react-native-umeng-push')
         compile project(':react-native-sqlite-storage')
         compile fileTree(dir: "libs", include: ["*.jar"])
         compile "com.android.support:appcompat-v7:23.0.1"
