--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,20 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        <!-- 微信Activity -->
+        <activity
+                android:name="com.fe_sass.wxapi.WXEntryActivity"
+                android:exported="true"
+                android:label="@string/app_name"
+        />
+        <meta-data
+                android:name="UMENG_APPKEY"
+                android:value="589d77ef310c93264f0012c0" >
+        </meta-data>
+        <meta-data
+                android:name="UMENG_MESSAGE_SECRET"
+                android:value="2c2d53fc1ae56ec03221bcb605de1fd0" >
+        </meta-data>
     </application>
 
 </manifest>
