--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,8 +95,8 @@ lintOptions {
         applicationId "com.fe_sass"
         minSdkVersion 19
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         ndk {
             abiFilters "armeabi","armeabi-v8a"
         }
@@ -121,7 +121,7 @@ lintOptions {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
