--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,7 @@ import com.android.build.OutputFile
  */
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -156,6 +157,7 @@ dependencies {
         compile project(':react-native-vin-scan')
         compile project(':react-native-wheel-picker')
         compile project(':RCTWeChat')
+        compile project(':react-native-code-push')
         compile 'com.facebook.fresco:animated-gif:0.13.0'
         compile project(':react-native-spinkit')
 }
