--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,9 @@ lintOptions {
 }
 
 dependencies {
+    compile project(':react-native-wechat')
+    compile project(':react-native-update')
+    compile project(':react-native-umeng-push')
         compile project(':react-native-sqlite-storage')
         compile fileTree(dir: "libs", include: ["*.jar"])
         compile "com.android.support:appcompat-v7:23.0.1"
