--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,7 +122,7 @@ lintOptions {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-      //      signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
