--- a/ios/FE_Sass.xcodeproj/xcshareddata/xcschemes/FE_Sass.xcscheme
+++ b/ios/FE_Sass.xcodeproj/xcshareddata/xcschemes/FE_Sass.xcscheme
@@ -39,7 +39,7 @@
             buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
