--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'FE_Sass'
-include ':react-native-image-picker', ':react-native-vin-scan'
+include ':react-native-image-picker', ':react-native-vin-scan', ':react-native-qr-scan', ':react-native-custom-camera'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 
 include ':react-native-picker'
