--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-code-push": "^1.17.2-beta",
     "react-native-gallery": "0.0.17",
     "react-native-image-picker": "^0.25.7",
+    "react-native-keyboard-aware-scroll-view": "^0.2.7",
     "react-native-md5": "^1.0.0",
     "react-native-modal-datetime-picker": "^3.0.1",
     "react-native-picker": "^4.0.18",
