--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,21 +110,7 @@ lintOptions {
             include "armeabi","armeabi-v8a"
         }
     }
-    signingConfigs {
-            release {
-                storeFile file(MYAPP_RELEASE_STORE_FILE)
-                storePassword MYAPP_RELEASE_STORE_PASSWORD
-                keyAlias MYAPP_RELEASE_KEY_ALIAS
-                keyPassword MYAPP_RELEASE_KEY_PASSWORD
-            }
-        }
-    buildTypes {
-        release {
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            signingConfig signingConfigs.release
-        }
-    }
+
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
@@ -147,9 +133,6 @@ lintOptions {
 }
 
 dependencies {
-    compile project(':react-native-wechat')
-    compile project(':react-native-update')
-    compile project(':react-native-umeng-push')
         compile project(':react-native-sqlite-storage')
         compile fileTree(dir: "libs", include: ["*.jar"])
         compile "com.android.support:appcompat-v7:23.0.1"
@@ -158,6 +141,8 @@ dependencies {
         compile project(':react-native-image-picker')
         compile project(':react-native-picker')
         compile project(':react-native-vin-scan')
+        compile project(':react-native-qr-scan')
+        compile project(':react-native-custom-camera')
         compile project(':react-native-wheel-picker')
         compile project(':RCTWeChat')
         compile project(':react-native-code-push')
