--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
-lintOptions {
+    lintOptions {
         checkReleaseBuilds false
         abortOnError false
     }
@@ -100,6 +100,21 @@ lintOptions {
         versionName "2.2.0"
         ndk {
             abiFilters "armeabi","armeabi-v8a"
+        }
+    }
+    signingConfigs {
+        release {
+            storeFile file(MYAPP_RELEASE_STORE_FILE)
+            storePassword MYAPP_RELEASE_STORE_PASSWORD
+            keyAlias MYAPP_RELEASE_KEY_ALIAS
+            keyPassword MYAPP_RELEASE_KEY_PASSWORD
+        }
+    }
+    buildTypes {
+        release {
+            minifyEnabled enableProguardInReleaseBuilds
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     splits {
