--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,7 +114,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-           // signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
         }
     }
     splits {
