--- a/ios/FE_Sass/Info.plist
+++ b/ios/FE_Sass/Info.plist
@@ -29,7 +29,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx69699ad69f370cfc</string>
+				<string>wx6211535f6243c779</string>
 			</array>
 		</dict>
 	</array>
