--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,17 +104,17 @@ android {
     }
     signingConfigs {
         release {
-            /*storeFile file(MYAPP_RELEASE_STORE_FILE)
+            storeFile file(MYAPP_RELEASE_STORE_FILE)
             storePassword MYAPP_RELEASE_STORE_PASSWORD
             keyAlias MYAPP_RELEASE_KEY_ALIAS
-            keyPassword MYAPP_RELEASE_KEY_PASSWORD*/
+            keyPassword MYAPP_RELEASE_KEY_PASSWORD
         }
     }
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-            // signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
             buildConfigField "String", "CODEPUSH_KEY", '"SmjkaVnMj5aa_qPk1L1k8mnP1d58VJvFYEdiG"'
         }
 
