--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <uses-sdk
             android:minSdkVersion="19"
@@ -37,14 +40,16 @@
                 android:exported="true"
                 android:label="@string/app_name"
         />
-        <meta-data
-                android:name="UMENG_APPKEY"
-                android:value="589d77ef310c93264f0012c0" >
-        </meta-data>
-        <meta-data
-                android:name="UMENG_MESSAGE_SECRET"
-                android:value="2c2d53fc1ae56ec03221bcb605de1fd0" >
-        </meta-data>
+        <!--<meta-data-->
+                <!--android:name="UMENG_APPKEY"-->
+                <!--android:value="589d77ef310c93264f0012c0" >-->
+        <!--</meta-data>-->
+        <!--<meta-data-->
+                <!--android:name="UMENG_MESSAGE_SECRET"-->
+                <!--android:value="2c2d53fc1ae56ec03221bcb605de1fd0" >-->
+        <!--</meta-data>-->
+        <meta-data android:value="59472d73a325114927001745" android:name="UMENG_APPKEY"/>
+        <meta-data android:value="pugongying" android:name="UMENG_CHANNEL"/>
     </application>
 
 </manifest>
