--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://dl.bintray.com/growingioreactnative/maven/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-
+        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.growingio.reactnative:vds-gradle-plugin:0.0.9'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,5 +23,6 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+        maven { url 'https://dl.bintray.com/growingioreactnative/maven/' }
     }
 }
