--- a/ios/FE_Sass/Info.plist
+++ b/ios/FE_Sass/Info.plist
@@ -32,6 +32,16 @@
 				<string>wx6211535f6243c779</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>growingio</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>growing.de67dcc033d8a3c8</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>3.5.0</string>
