--- a/app/utils/quanxian.json
+++ b/app/utils/quanxian.json
@@ -113,13 +113,13 @@
             "children": [
               {
                 "id": 28,
-                "name": "\u95e8\u5e97\u63a5\u5f85\u7ba1\u7406",
+                "name": "\u95e8\u5e97\u63a5\u5f85",
                 "sort_id": 1,
                 "children": []
               },
               {
                 "id": 29,
-                "name": "\u4fdd\u6709\u5ba2\u6237\u7ba1\u7406",
+                "name": "\u4fdd\u6709\u5ba2\u6237",
                 "sort_id": 2,
                 "children": []
               }
