--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-sglistview": "^0.3.2",
     "react-native-spinkit": "^1.0.2",
     "react-native-sqlite-storage": "^3.2.2",
+    "react-native-swipe-list-view": "^0.4.1",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-tabs": "^1.0.9",
     "react-native-umeng-push": "^1.0.5",
