--- a/app/utils/quanxian.json
+++ b/app/utils/quanxian.json
@@ -133,7 +133,7 @@
               {
                 "id": 27,
                 "name": "\u8f6f\u6587\u4e2d\u5fc3",
-                "sort_id": 10,
+                "sort_id": 1,
                 "children": []
               }
             ]
@@ -145,7 +145,7 @@
             "children": [
               {
                 "id": 18,
-                "name": "\u8ba2\u9605\u8f66\u8f86",
+                "name": "\u8ba2\u9605\u8f66\u6e90",
                 "sort_id": 1,
                 "children": []
               },
@@ -190,6 +190,19 @@
                 "id": 33,
                 "name": "\u4e92\u52a8\u6d88\u606f",
                 "sort_id": 5,
+                "children": []
+              }
+            ]
+          },
+          {
+            "id": 45,
+            "name": "\u5fae\u5e97",
+            "sort_id": 6,
+            "children": [
+              {
+                "id": 46,
+                "name": "\u5fae\u5e97",
+                "sort_id": 1,
                 "children": []
               }
             ]
@@ -279,6 +292,12 @@
                 "name": "\u914d\u7f6e",
                 "sort_id": 9,
                 "children": []
+              },
+              {
+                "id": 47,
+                "name": "\u6211\u7684\u8f66\u6e90",
+                "sort_id": 10,
+                "children": []
               }
             ]
           }
@@ -289,15 +308,15 @@
   "code": 0,
   "msg": "ok",
   "trace": {
-    "start_time": "2017-08-08 10:20:49",
+    "start_time": "2017-08-12 15:41:54",
     "source_ip": "10.3.1.211",
     "source_url": "http:\/\/user.dycd.com\/home\/index\/getFunctionByTokenEnter",
     "server_version": "7.1.1",
     "file_max_size": "50M",
     "post_max_size": "50M",
     "server_ip": "10.3.10.28",
-    "cost_time": "0.051104s",
-    "cost_mem": "1.590302 MBk",
+    "cost_time": "0.045505s",
+    "cost_mem": "1.601082 MBk",
     "sql": [
       "SELECT * FROM `user_token_map` WHERE `token` = '0b5b1b8d5b9feb676ca010d1d149d0a1' LIMIT 1 ",
       "SELECT * FROM `user_token_map` WHERE `token` = '0b5b1b8d5b9feb676ca010d1d149d0a1' LIMIT 1 ",
@@ -305,8 +324,8 @@
       "SELECT `role_type` FROM `user_enterprise_user_map` WHERE `e_uid` = 8072 AND `u_uid` = 8071 AND `is_show` = 1 ",
       "SELECT `function_type` FROM `role_function_map` WHERE `role_type` IN (1) AND `status` = 1 ",
       "SELECT `function_type` FROM `role_function_map` WHERE `role_type` IN (1) AND `status` = 1 ",
-      "SELECT `function_type`,`parent_id` FROM `function_info_dict` WHERE `function_type` IN (15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44) AND `status` = 1 ",
-      "SELECT `function_type`,`parent_id` FROM `function_info_dict` WHERE `function_type` IN (6,7,8,9,10,11,12,13,14) AND `status` = 1 ",
+      "SELECT `function_type`,`parent_id` FROM `function_info_dict` WHERE `function_type` IN (15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,46,47) AND `status` = 1 ",
+      "SELECT `function_type`,`parent_id` FROM `function_info_dict` WHERE `function_type` IN (6,7,8,9,10,11,12,13,14,45) AND `status` = 1 ",
       "SELECT `function_type`,`function_name`,`sort_id` FROM `function_info_dict` WHERE `status` = 1 "
     ]
   }
