--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'FE_Sass'
 
-include ':react-native-vin-scan', ':react-native-qr-scan', ':react-native-custom-camera'
+include ':react-native-vin-scan', ':react-native-qr-scan', ':react-native-custom-camera', ':react-native-share-wechat'
 
 include ':react-native-update'
 project(':react-native-update').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-update/android')
