--- a/android/react-native-qr-scan/build.gradle
+++ b/android/react-native-qr-scan/build.gradle
@@ -30,5 +30,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/ZBarDecoder.jar')
+    compile files('libs/BaiduLBS_Android.jar')
     compile 'com.facebook.react:react-native:+'
 }
