--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=sass-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=dycd
+MYAPP_RELEASE_STORE_PASSWORD=13001286215
+MYAPP_RELEASE_KEY_PASSWORD=13001286215
