--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,7 +88,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion "23.0.1"
 
     lintOptions {
         checkReleaseBuilds false
