--- a/ios/FE_Sass/Info.plist
+++ b/ios/FE_Sass/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.5.0</string>
+	<string>4.6.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -44,7 +44,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>4.5.0</string>
+	<string>4.6.1</string>
 	<key>CodePushDeploymentKey</key>
 	<string>$(CODEPUSH_KEY)</string>
 	<key>LSApplicationCategoryType</key>
@@ -70,17 +70,17 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>访问相机</string>
+	<string>程序需要访问相机拍摄图片</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>使用定位</string>
+	<string>程序将使用始终访问位置功能获取当前城市</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>使用您的定位</string>
+	<string>程序将使用期间访问位置功能获取当前城市</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>访问相册</string>
+	<string>程序将使用您的麦克风</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>保存图片到相册</string>
+	<string>程序需要保存图片到相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>访问相册</string>
+	<string>程序需要访问相册获取图片</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
