--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "ios": "react-native run-ios"
   },
   "dependencies": {
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "react": "~15.4.0-rc.4",
     "react-native": "0.41.1",
     "react-native-code-push": "^1.17.2-beta",
@@ -33,7 +35,9 @@
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-native": "1.9.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "jest": "18.1.0",
     "react-test-renderer": "~15.4.0-rc.4"
   },
