--- a/ios/FE_Sass/Info.plist
+++ b/ios/FE_Sass/Info.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>METHOD</key>
-	<string>enterprise</string>
+	<key>Method</key>
+	<string>METHOD</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
